--- a/src/pug/pages/ui/header-search.pug
+++ b/src/pug/pages/ui/header-search.pug
@@ -26,7 +26,8 @@ block content
 					+searchResult ('thumb-4.png', '<strong>Кошелек</strong> для монет N/S|Морской пейзаж')
 				.header-search-result-desktop
 					.header-search-result
-						.header-search-result__category Категория
+						.header-search-result__category 
+							strong Категории
 							.devide
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Новинки > Кошельки
@@ -40,7 +41,8 @@ block content
 								a.header-search-result__link-item(href="") Кошельки > Большие кошельки
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошельки > Кошельки на круговой молнии
-						.header-search-result__goods Товары
+						.header-search-result__goods
+							strong Товары
 							.devide
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
