header some changes

--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -24,10 +24,12 @@
 					.menu-block.user-registration
 						img(src="../../img/icons/profile.svg" alt="иконка")
 						.user-registration__text
-							a(href="#!") Вход 
-							| или 
-							a(href="#!") Регистрация |
+							a(href="#!") Вход
+							|  или 
+							a(href="#!") Регистрация
+							|  |
 					.menu-block.cart
 						.cart__image
-							img(src="../../img/icons/cart-color.svg" alt="иконка")
+							img(src="../../img/icons/bag-color.svg" alt="иконка")
+							.cart__image-total 3
 						.cart__amount.menu-icon 5850р.
