--- a/src/less/sections/_header-search.less
+++ b/src/less/sections/_header-search.less
@@ -137,3 +137,9 @@
 		justify-content: space-between;
 	}
 }
+.header-search-result-desktop {
+	display: none;
+}
+.header-search-result-mobile {
+	display: none;
+}
