--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -1,5 +1,6 @@
 .card-product {	
 	position: relative;
+	max-width: 329px;
 	width: 100%;
 	display: flex;	
 	flex-direction: column;
@@ -7,7 +8,7 @@
 	height: 345px;	
 	padding-top: 30px;	
 	text-align: center;
-	margin-bottom: 24px;
+	margin-bottom: 8px;
 	background-color: #fff;
 	@media @mobile {
 		padding: 24px 8px;
@@ -27,30 +28,36 @@
 	right: 16px;
 	color: #e1e1e1;
 	transition: color 1s;
-	
+		@media @desktop {
+			top: 10px;
+		}
 }
 .card-heart-icon:hover {color: @red;}
 
-.card-product__img {
-	
-	height: 125px;	
+.card-product__img {		
 	overflow:hidden;
 	margin-bottom: 8px;	
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;	
-	@media @mobile {height: 176px;}	
 	@media @desktop {
 		cursor:pointer;
 		width: 200px;
 		height: 196px;}
 }
+.product-img {
+	height: 170px;	
+	@media @tablet{
+		height: 150px;
+	}
+	@media @desktop{
+		height: 176px;
+	}
+}
 
 .card-product__text {
-	color:@text-card;
-	font-size: 11px;
-	line-height: 12px;	
-	height: 64px;
+	color:@text-card;		
+	min-height: 64px;
 	margin-bottom: 8px;
 	@media @mobile {
 		font-size: 14px;
@@ -59,9 +66,9 @@
 	}
 	@media (min-width: 768px) {
 		margin-bottom: 16px;
-		height: 75px;}
+		min-height: 75px;}
 	@media @desktop {
-		height: 55px;
+		min-height: 55px;
 		margin-bottom: 24px;
 		font-size: 16px;
 		line-height: 18px;		
@@ -105,10 +112,8 @@
 		width: 160px;		
 	}
 }
-.price-new {
-	color: @text-red;
-	
-}
+.price-new {color: @text-red;}
+
 .price-old{
 	font-weight: 300;
 	display: inline-block;
