--- a/src/less/blocks/_section-card.less
+++ b/src/less/blocks/_section-card.less
@@ -3,7 +3,7 @@
 	max-width: 524px;
 	margin-left: auto;
 	margin-right: auto;
-	height: 233px;
+	min-height: 233px;
 	text-align: center;	
 	padding-top: 24px;
 	padding-bottom: 24px;
@@ -16,13 +16,13 @@
 	color: @white;
 	@media @tablet{
 		margin-bottom: 16px;
-		height: 250px;}
+		min-height: 250px;}
 	@media @desktop {
-		padding-top: 30px;
-		height: 321px;}
+		padding-top: 48px;
+		min-height: 348px;}
 	@media @desktopXL {
 		margin-bottom: 24px;
-		height: 335px;}
+		min-height: 321px;}
 }
 .card-description--color{
 	margin-bottom: 0;
@@ -44,23 +44,23 @@
 
 }
 .card-description__text{	
-	height: 96px;
+	min-height: 96px;
 	margin-bottom: 24px;
 	line-height: 1.28em;		
 	font-size: 14px;
 	@media (min-width: 480px) {
 		line-height: 1.5;
-		height: 91px;
+		min-height: 91px;
 		}
-	@media (min-width: 768px) {line-height: 1.3em;}	
+	@media (min-width: 768px) {line-height: 1.38em;}	
 	@media @desktop {
-		height: 115px;
+		min-height: 115px;
 		font-size: 18px;}
 }
 .card-description--img {
-	height: 286px;
-	@media @tablet {height: 307px !important;}
-	@media (min-width: 480px) {height: 344px !important;}
-	@media @desktop {height: 340px !important;}
-	@media @desktopXL {height: 435px !important;}
+	min-height: 218px;
+	@media @tablet {min-height: 307px !important;}
+	@media (min-width: 480px) {min-height: 344px !important;}
+	@media @desktop {min-height: 340px !important;}
+	@media @desktopXL {min-height: 435px !important;}
 }
