--- a/src/pug/pages/ui/section-card.pug
+++ b/src/pug/pages/ui/section-card.pug
@@ -25,6 +25,6 @@ block content
 					.card-description__text  #{cardText}
 					+button-detail('Подробнее','#')
 			mixin card-product-img(bgColor, imgSrc, imgHeight )
-				.card-description.card-description--img(style="background:"+ bgColor+" url('../img/"+imgSrc+"') center no-repeat; background-size: cover; height: "+imgHeight)
+				.card-description.card-description--img(style="background:"+ bgColor+" url('../img/"+imgSrc+"') center no-repeat; background-size: cover; min-height: "+imgHeight)
 
 		
