--- a/src/pug/pages/ui/sales_hits.pug
+++ b/src/pug/pages/ui/sales_hits.pug
@@ -15,12 +15,12 @@ block content
 					.col-6.col-md-3
 						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р', '6 990 р' )
 							+button-cart('В корзину','#')
-					.col-6.col-md-3
+					.col-6.col-md-3.order-lg-4
 						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р', '6 990 р' )
 							+button-cart('В корзину','#')
-					.col-6.col-md-3
+					.col-6.col-md-3.order-md-4.order-lg-3
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', 'Сумка большая, коллекция "Рига"', '1 990 р')
 							+button-store('Нет в наличии','#')
-					.col-6.col-md-3
+					.col-6.col-md-3.order-md-3.order-lg-2
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 893 р')
 							+button-cart('В корзину','#')
