--- a/src/less/sections/_footer-navigation.less
+++ b/src/less/sections/_footer-navigation.less
@@ -56,6 +56,7 @@
 		line-height: 1;
 		color: @text-card;
 		margin-bottom: 18px;
+		text-transform: uppercase;
 		&:hover, &:focus, &:active {
 			color: @text-red;
 			text-decoration: none;
