--- a/src/pug/pages/ui/header-search.pug
+++ b/src/pug/pages/ui/header-search.pug
@@ -49,7 +49,7 @@ block content
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошелек средний тройного сложения
 							span.header-search-result__link
-								a.header-search-result__link-item.header-search-result__link-item--active(href="") Кошелек на молнии
+								a.header-search-result__link-item(href="") Кошелек на молнии
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Бумажник средний с отд. для монет на молнии и 10 карт
 					.header-search-result-img
