--- a/src/pug/sections/header-search.pug
+++ b/src/pug/sections/header-search.pug
@@ -1,5 +1,5 @@
 .container
-.header-search-section.d-block
+.header-search-section
 	.header-search#header-search-section
 		input.header-search__input(type="text" placeholder="Поиск товара...")
 		.header-search__close
