--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -2,13 +2,12 @@ extends ../../layouts/ui-layout/ui-layout.pug
 
 block variables
 	- var title = 'Карточки - UI-kit и HTML фреймворк - Документация';
-	- var pageClass = 'body--dashboard';
+	- var pageClass = 'body--dashboard body-bg';
 
 block content
 
-	.container.container--left.bg-color
+	.container.container--left
 		.title Карточки
-		.title-2 Карточка
 		
 		.section-ui
 			.row
