--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -1,25 +1,25 @@
 .card-product {	
 	position: relative;
-	max-width: 329px;
 	width: 100%;
 	display: flex;	
 	flex-direction: column;
 	align-items: center;
-	height: 345px;	
 	padding-top: 30px;	
 	text-align: center;
 	margin-bottom: 8px;
 	background-color: #fff;
-	@media @mobile {
-		padding: 24px 8px;
-		height: 376px;	}
-	
-	@media (min-width: 992px) {
-		padding: 24px 16px;
-		height: 400px;
-	}
+	padding-bottom: 24px;
+	@media @desktop { padding: 24px 8px; }
 }
-.card-heart-icon{
+
+.card-product--colorscheme{	
+	height: 392px;
+	padding-bottom: 10px;
+	@media @tablet { height: 434px; }
+	@media @desktop { padding-bottom: 22px; }
+}
+
+.card-heart-icon {
 	display: block;
 	width: 16px;
 	height: 16px;	
@@ -28,65 +28,65 @@
 	right: 16px;
 	color: #e1e1e1;
 	transition: color 1s;
-		@media @desktop {
-			top: 10px;
-		}
+	&:hover {color: @red;}
+	@media @desktop { top: 10px; }
 }
-.card-heart-icon:hover {color: @red;}
 
-.card-product__img {		
-	overflow:hidden;
+.card-product__img {
+	overflow: hidden;
 	margin-bottom: 8px;	
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;	
+	height: 168px;
+	flex-shrink: 0;
+	
 	@media @desktop {
 		cursor:pointer;
 		width: 200px;
-		height: 196px;}
+		height: 193px;
+	}
 }
+
 .product-img {
 	height: 170px;	
-	@media @tablet{
-		height: 150px;
-	}
-	@media @desktop{
-		height: 176px;
-	}
+	@media @tablet { height: 150px; }
+	@media @desktop { height: 176px; }
 }
 
 .card-product__text {
-	color:@text-card;		
+	color: @text-card;		
 	min-height: 64px;
 	margin-bottom: 8px;
-	@media @mobile {
-		font-size: 14px;
-		line-height: 16px;
+	font-size: 14px;
+	line-height: 16px;
 
-	}
-	@media (min-width: 768px) {
+	@media @tablet {
 		margin-bottom: 16px;
-		min-height: 75px;}
+		min-height: 75px;
+	}
+
 	@media @desktop {
 		min-height: 55px;
-		margin-bottom: 24px;
-		font-size: 16px;
 		line-height: 18px;		
 	}
+
 	@media @desktopXL {
-		font-size: 18px;
+		margin-bottom: 24px;
 	}
+
 }
+
 .card-product__price{
 	color:@text-card;
 	font-size: 16px;
 	font-weight: 600;
 	margin-bottom: 8px;
-	@media (min-width: 992px){
+	@media @desktop {
 		font-size: 18px;
-		
 	}
 }
+
 .card-label-sale{
 	position: absolute;
 	top: 16px;
@@ -101,24 +101,25 @@
 	color: @white;
 	line-height: 16px;
 	padding-top: 8px;
-	
 }
+
 .card__price--sale{
 	width: 140px;	
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	@media (min-width: 992px){
+	@media @desktop {
 		width: 160px;		
 	}
 }
-.price-new {color: @text-red;}
+.price-new { color: @text-red; }
 
 .price-old{
 	font-weight: 300;
 	display: inline-block;
 	position: relative;
 }
+
 .price-old:after{
 	content:"";
 	width: 115%;
@@ -134,19 +135,12 @@
 	align-items: center;
 	justify-content: space-around;
 	width: 140px;
-	@media (min-width: 992px){width: 160px;}
+	@media @desktop { width: 160px; }
 }
+
 .colors-product__circle{
 	width: 16px;
 	height: 16px;
 	border-radius: 50%;
 	margin-top: 16px;
-
-}
-.card-product--colorscheme{	
-	height: 392px;
-	@media (min-width: 768px){height: 434px;}
-}
-.bg-color{
-	background-color: #f3f3f3;
 }
