--- a/src/less/blocks/_sales-hits.less
+++ b/src/less/blocks/_sales-hits.less
@@ -1,10 +1,12 @@
-.sales-hits{
+.sales-hits {
 	width: 100%;
 	background-color: @white;
 	text-align: center;
-	.mixin-margin(bottom,@l2);	
-	
+	.mixin-margin(bottom,@l2);
+	&:before {
+		content: "";
+		display: table;
+	}
 }
-.sales-hits__title{	.mixin-margin(bottom,@l2);}
 
-	
+.sales-hits__title { .mixin-margin(bottom,@l2); }
