--- a/src/pug/mixins/_buttons.pug
+++ b/src/pug/mixins/_buttons.pug
@@ -19,10 +19,10 @@ mixin button-addcart(text, link)
 
 //- Buttons she he
 mixin button-she(text, link)
-	a(class="button-subscribe button-subscribe--she" href=link)&attributes(attributes) #{text}
+	a(class="button-subscribe button-subscribe--she button-subscribe--border" href=link)&attributes(attributes) #{text}
 
 mixin button-he(text, link)
-	a(class="button-subscribe button-subscribe--he" href=link)&attributes(attributes) #{text}
+	a(class="button-subscribe button-subscribe--he button-subscribe--border" href=link)&attributes(attributes) #{text}
 
 //- Button order
 mixin button-order(text, link, price)
