--- a/src/pug/pages/ui/footer-subscribe.pug
+++ b/src/pug/pages/ui/footer-subscribe.pug
@@ -15,7 +15,7 @@ block content
 					.title-4 Выбери цвет своей индивидуальности!
 					.footer-subscribe--subtitle Будь в курсе новостей и специальных предложениях!
 					form.footer-subscribe--form(action="")
-						input.footer-subscribe--input(type="text" placeholder="Email")
+						input.footer-subscribe--input.footer-subscribe--border(type="text" placeholder="Email")
 						.footer-subscribe--buttons
 							+button-she("Она", "#")
 							+button-he("Он", "#")
