--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -55,9 +55,15 @@
 .title-4 { 
 	line-height: 1.5;
 	font-size: 20px;
-	color: @text-card;
+	color: @text;
 	font-weight: 600;
 	text-align: center;
+	margin-bottom: 16px;
+}
+@media @tablet {
+	.title-4 {
+		margin-bottom: 8px;
+	}
 }
 
 .title-5 { font-size: 18px; font-weight: 900; }
