--- a/src/pug/pages/ui/footer-navigation.pug
+++ b/src/pug/pages/ui/footer-navigation.pug
@@ -12,7 +12,7 @@ block content
 			.section-ui
 				.footer-navigation
 					.footer-navigation-devide
-					.footer-navigation.footer-navigation--mobile
+					.footer-navigation--mobile
 						span.footer-navigation--item
 							a.footer-navigation--link(href="#") О компании
 						span.footer-navigation--item
@@ -23,7 +23,7 @@ block content
 							a.footer-navigation--link(href="#") Оплата и доставка
 						span.footer-navigation--item
 							a.footer-navigation--link(href="#") Покупателю
-					.footer-navigation.footer-navigation--desktop
+					.footer-navigation--desktop
 						.footer-navigation--desktop-block
 							a.footer-navigation--desktop--title(href="#") 
 								strong О компании
@@ -37,6 +37,19 @@ block content
 								a.footer-navigation--link(href="#") Блог
 						.footer-navigation--desktop-block
 							a.footer-navigation--desktop--title(href="#")
+								strong Адреса магазинов
+						.footer-navigation--desktop-block
+							a.footer-navigation--desktop--title(href="#")
+								strong Контакты
+						.footer-navigation--desktop-block
+							a.footer-navigation--desktop--title(href="#") 
+								strong Оплата и доставка
+							span.footer-navigation--item
+								a.footer-navigation--link(href="#") Гарантия
+							span.footer-navigation--item
+								a.footer-navigation--link(href="#") Условия доставки
+						.footer-navigation--desktop-block
+							a.footer-navigation--desktop--title(href="#")
 								strong Покупателю
 							span.footer-navigation--item
 								a.footer-navigation--link(href="#") Клубная карта
@@ -45,18 +58,7 @@ block content
 							span.footer-navigation--item
 								a.footer-navigation--link(href="#") Хранение и уход
 							span.footer-navigation--item
-								a.footer-navigation--link(href="#") Конфиденциальность
-						.footer-navigation--desktop-block
-							a.footer-navigation--desktop--title(href="#") 
-								strong Оплата и доставка
-							span.footer-navigation--item
-								a.footer-navigation--link(href="#") Гарантия
-						.footer-navigation--desktop-block
-							a.footer-navigation--desktop--title(href="#")
-								strong Адреса магазинов
-						.footer-navigation--desktop-block
-							a.footer-navigation--desktop--title(href="#")
-								strong Контакты
+								a.footer-navigation--link(href="#") Конфиденциальность						
 			.section-ui
 				pre.
 					ui/footer-navigation.pug
