first-commit-catalogue-section

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,6 +24,7 @@
 @import "sections/_header-search";
 @import "sections/_header-nav";
 @import "sections/_header-top";
+@import "sections/_catalogue-section.less";
 
 
 // Pages
