--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -36,7 +36,7 @@
 		.left-panel-nav
 
 			+linkLeftPanel("Хиты продаж", "#")
-			+linkLeftPanel("Разделы каталога", "#")
+			+linkLeftPanel("Разделы каталога", "catalogue-section.html")
 
 			+linkLeftPanel("Шапка - Выпадающее меню", "#")
 			+linkLeftPanel("Шапка - Поиск", "header-search.html")
