--- a/src/less/blocks/_section-card.less
+++ b/src/less/blocks/_section-card.less
@@ -16,7 +16,9 @@
 	color: @white;
 	@media @tablet{
 		margin-bottom: 16px;
-		min-height: 250px;}
+		min-height: 250px;
+		float: left;
+	}
 	@media @desktop {
 		padding-top: 48px;
 		min-height: 348px;}
@@ -25,9 +27,15 @@
 		margin-bottom: 24px;
 		min-height: 321px;}
 }
+.card-description:nth-child(2n){
+	margin-bottom: 16px;
+	@media @desktopXL {margin-bottom: 24px;}
+
+}
+
 .card-description--color{
-	margin-bottom: 0;
-	@media (min-width: 768px){
+	//margin-bottom: 0;
+	@media @tablet{
 		margin-bottom: 16px;
 	}
 	@media @desktopXL {
@@ -37,10 +45,8 @@
 	margin: 0;
 	padding: 0;
 	margin-bottom: 10px;
-	font-size: 16px;
-	@media @mobile {
-		font-size: 18px;		
-	}
+	font-size: 18px;
+	
 	@media @desktop {font-size: 24px;}
 
 }
@@ -54,15 +60,20 @@
 		line-height: 1.5;
 		min-height: 91px;
 		}
-	@media (min-width: 768px) {line-height: 1.38em;}	
+	@media @tablet {line-height: 1.38em;}	
 	@media @desktop {
 		min-height: 115px;
 		font-size: 18px;}
 }
-.card-description--img {
-	min-height: 218px;
-	@media @tablet {min-height: 307px !important;}
-	@media (min-width: 480px) {min-height: 344px !important;}
+
+ .card-description--img {	
 	@media @desktop {min-height: 340px !important;}
 	@media @desktopXL {min-height: 435px !important;}
 }
+@media @desktop {
+	.card-description--img-1{min-height: 437px !important;}
+	.card-description--img-2{min-height: 333px !important;}
+	.card-description--img-3{min-height: 399px !important;}
+	}
+
+	
