added pre include

--- a/src/pug/pages/ui/footer-subscribe.pug
+++ b/src/pug/pages/ui/footer-subscribe.pug
@@ -24,3 +24,6 @@ block content
 							input.footer-subscribe--checkbox(type="checkbox")
 							span.footer-subscribe--checkbox-custom
 							p.footer-subscribe--checkbox-label-text Я принимаю политику конфиденциальности.
+		.section-ui
+			pre.
+				include section/_footer-subscribe.pug
