--- a/src/pug/pages/ui/forms.pug
+++ b/src/pug/pages/ui/forms.pug
@@ -7,7 +7,7 @@ block variables
 block content
 	.container.container--left
 		
-		.title Подвал - Форма подписки
+		.title Элементы формы
 
 		.section-ui
 		title Элементы формы
