--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -49,13 +49,11 @@
       
 			+linkLeftPanel("Шапка - Все вместе", "#")
 
-
-			+linkLeftPanel("Подвал - Навигация", "#")
 			+linkLeftPanel("Подвал - Форма подписки", "footer-subscribe.html")
 			+linkLeftPanel("Подвал - Навигация", "footer-navigation.html")
 			+linkLeftPanel("Подвал - Форма подписки", "footer-subscribe.html")
-			+linkLeftPanel("Подвал - Социальные сети", "#")
-			+linkLeftPanel("Подвал - Общий, все вместе", "#")
+			+linkLeftPanel("Подвал - Социальные сети", "ui-social.html")
+			+linkLeftPanel("Подвал - Общий, все вместе", "footer.html")
 
 	.left-panel__section
 		p.strong Страницы
