--- a/src/less/sections/_footer-navigation.less
+++ b/src/less/sections/_footer-navigation.less
@@ -17,6 +17,7 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	margin-bottom: 21px;
 }
 @media @desktop {
 	.footer-navigation {
@@ -61,6 +62,7 @@
 		color: @text;
 		margin-bottom: 18px;
 		text-transform: uppercase;
+		white-space: nowrap;
 		&:hover, &:focus, &:active {
 			color: @text-red;
 			text-decoration: none;
@@ -75,5 +77,10 @@
 		font-size: 16px;
 		text-transform: none;
 		color: @text;
+	}
+}
+@media @desktopXL {
+	.footer-navigation--desktop {
+		justify-content: space-between;
 	}
 }
