--- a/src/less/sections/_header-nav.less
+++ b/src/less/sections/_header-nav.less
@@ -24,12 +24,16 @@ nav {
 			display: block;
 			color:@textMenu;
 			padding:12px 16px;
+		
+			@media @desktop {
+				padding:8px 16px;		
+			}
 		}
 	}
 
 	// Иконка треугольник
 	.menu-icon {
-		.icon-mixin(@textMenu, 16px, 20px);
+		.icon-mixin(@textMenu, 16px, 16px);
 	}
 }
 
@@ -87,12 +91,12 @@ ul.menu-level-2 {
 		flex-direction: row;
 		justify-content: flex-start;
 		width: 100%;
-		padding:8px 62px;
+		padding:16px 62px 36px;
 		box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 	}
 	
 	@media @desktopXL {
-		padding:8px 85px;
+		padding:16px 85px 48px;
 	}
 }
 
