added pre include

--- a/src/pug/pages/ui/footer.pug
+++ b/src/pug/pages/ui/footer.pug
@@ -56,3 +56,6 @@ block content
 									+social-icon('#', 'instagram.svg','instagram')
 									+social-icon('#', 'vk.svg','vk')
 									+social-icon('#', 'fb.svg','fb')
+		.section-ui
+			pre.
+				include ../../sections/footer.pug
