--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,2 +1,46 @@
-// Секция под футер для сайта
-h1 Тут будет Подвал сайта
+.container
+	.footer-navigation
+		.footer-navigation-devide
+		.footer-navigation-mobile
+			a.footer-navigation-mobile__link(href="#") О компании
+			a.footer-navigation-mobile__link(href="#") Адреса магазинов
+			a.footer-navigation-mobile__link(href="#") Контакты
+			a.footer-navigation-mobile__link(href="#") Оплата и доставка
+			a.footer-navigation-mobile__link(href="#") Покупателю
+		.footer-navigation-desktop.col-10.offset-xl-1.offset-lg-1
+			.footer-navigation-desktop__block
+				a.footer-navigation-desktop__title(href="#") 
+					strong О компании
+				a.footer-navigation__link(href="#") О бренде
+				a.footer-navigation__link(href="#") Вакансии
+				a.footer-navigation__link(href="#") Сотрудничество
+				a.footer-navigation__link(href="#") Блог
+			.footer-navigation-desktop__block
+				a.footer-navigation-desktop__title(href="#")
+					strong Покупателю
+				a.footer-navigation__link(href="#") Клубная карта
+				a.footer-navigation__link(href="#") Подарочная карта
+				a.footer-navigation__link(href="#") Хранение и уход
+				a.footer-navigation__link(href="#") Конфиденциальность
+			.footer-navigation-desktop__block
+				a.footer-navigation-desktop__title(href="#") 
+					strong Оплата и доставка
+				a.footer-navigation__link(href="#") Гарантия
+				a.footer-navigation__link(href="#") Условия доставки
+			.footer-navigation-desktop__block
+				a.footer-navigation-desktop__title(href="#")
+					strong Адреса магазинов
+			.footer-navigation-desktop__block
+				a.footer-navigation-desktop__title(href="#")
+					strong Контакты
+	.container
+		.row.footer-bottom
+			.col-12.col-lg-5.offset-lg-1.col-md-8.offset-md-2
+				include ../../sections/_footer-subscribe.pug
+			.col-12.col-lg-5
+				.social.text-center
+					.title-4.social-block__title Мы в социальных сетях
+					.social-block
+						+social-icon('#', 'instagram.svg','instagram')
+						+social-icon('#', 'vk.svg','vk')
+						+social-icon('#', 'fb.svg','fb')
