--- a/src/less/main.less
+++ b/src/less/main.less
@@ -16,6 +16,7 @@
 @import "blocks/_section-card.less";
 @import "blocks/_card-product.less";
 @import "blocks/_social.less";
+@import "blocks/_sections.less";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
